--- a/languages/eduhack-projects-widget-en_US.po
+++ b/languages/eduhack-projects-widget-en_US.po
@@ -15,6 +15,12 @@ msgstr ""
 "PO-Revision-Date: \n"
 "X-Poedit-SearchPath-0: .\n"
 
+msgid "Projectes"
+msgstr "Projects"
+
+msgid "Projecte"
+msgstr "Project"
+
 msgid "Equip"
 msgstr "Team"
 
